--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@prisma/client": "^5.17.0",
+    "@tanstack/react-query": "^5.51.15",
     "axios": "^1.7.2",
     "bcrypt": "^5.1.1",
     "next": "14.2.5",
