--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "@prisma/client": "^5.17.0",
     "@tanstack/react-query": "^5.51.15",
+    "@types/lodash": "^4.17.7",
     "axios": "^1.7.2",
     "bcrypt": "^5.1.1",
+    "lodash": "^4.17.21",
     "next": "14.2.5",
     "next-auth": "^4.24.7",
     "react": "^18",
